--- a/Recruitment_Task/src/main/resources/templates/startPage.html
+++ b/Recruitment_Task/src/main/resources/templates/startPage.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Git Committs</title>
+    <title>Git Commits</title>
     <link rel="stylesheet" th:href="@{/styles.css}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
           rel="stylesheet"
@@ -10,15 +10,15 @@
           crossorigin="anonymous">
 </head>
 <body>
-<form>
+<form method="post" th:action="@{/urls}" th:object="${url}">
     <table>
         <tr>
             <td><label>Owner</label></td>
-            <td><input type="text"></td>
+            <td><input type="text" th:field="${url.owner}"></td>
         </tr>
         <tr>
             <td><label>Repository</label></td>
-            <td><input type="text"></td>
+            <td><input type="text" th:field="${url.repository}"></td>
         </tr>
         <tr>
             <td><input type="submit", class="btn btn-primary"></td>
